# bisindo-video-recognition

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.dvc/: config
bisindo_video_recognition/: cnn.py  webcam.py
data/: .gitignore  interim.dvc  raw.dvc
dvclive/: metrics.json
dvclive/plots/metrics/: test_accuracy.tsv  test_loss.tsv
dvclive/plots/metrics/eval/: accuracy.tsv  loss.tsv
dvclive/plots/metrics/train/: accuracy.tsv  loss.tsv
models/: .gitignore  1.0-sam-cnn-lstm-model-training.ipynb  seq_model.keras.dvc
notebooks/: 0.0.1-sam-copy-data-to-bucket.ipynb  0.1.0-sam-cnn-lstm-experiment.ipynb  0.1.1-sam-cnn-embedded-lstm-model.ipynb  dvc.yaml
