[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bisindo_video_recognition"
version = "0.0.1"
description = "A BISINDO Indonesian sign language recognition"
authors = [
  { name = "Sam" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"
dependencies = [
    "dvc>=3.59.1",
    "dvc-gs>=3.0.1",
    "opencv-python>=4.11.0.86",
    "tensorflow~=2.11",
    "tensorflow-io-gcs-filesystem==0.31.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["bisindo_video_recognition"]
force_sort_within_sections = true
